--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tfarras/nestjs-firebase-admin",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "NestJS Module for Firebase Admin SDK",
   "author": "Taimoor Farras <farrastaimoor@gmail.com>",
   "readmeFilename": "README.md",
@@ -39,31 +39,31 @@
   },
   "homepage": "https://github.com/tfarras/nestjs-firebase-admin#readme",
   "peerDependencies": {
-    "@nestjs/common": "^6.0.0",
-    "firebase-admin": "^8.10.0"
+    "@nestjs/common": "^7.0.0",
+    "firebase-admin": "^9.3.0"
   },
   "dependencies": {
-    "firebase-admin": "^8.10.0"
+    "firebase-admin": "^9.3.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nestjs/testing": "6.1.1",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/supertest": "2.0.7",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/testing": "7.0.0",
+    "@types/express": "4.17.3",
+    "@types/jest": "25.2.3",
+    "@types/node": "^13.9.1",
+    "@types/supertest": "2.0.8",
     "rxjs": "^6.5.4",
-    "jest": "24.7.1",
-    "prettier": "1.17.0",
+    "jest": "26.0.1",
+    "prettier": "^1.19.1",
     "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.1.0",
+    "ts-jest": "26.1.0",
+    "ts-node": "8.6.2",
     "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
+    "tsconfig-paths": "3.9.0",
     "tslint": "5.16.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
